@@ -1,21 +1,29 @@
 package com.swiftlicious.hellblock;
 
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.lang.reflect.Method;
-import java.util.Arrays;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
+import java.security.DigestInputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.EnumSet;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-import java.util.UUID;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.zip.GZIPInputStream;
 
 import org.bukkit.Bukkit;
-import org.bukkit.World;
-import org.bukkit.block.data.BlockData;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.event.HandlerList;
@@ -29,13 +37,11 @@ import com.swiftlicious.hellblock.api.Metrics;
 import com.swiftlicious.hellblock.api.Reloadable;
 import com.swiftlicious.hellblock.api.TpsMonitor;
 import com.swiftlicious.hellblock.challenges.ChallengeManager;
+import com.swiftlicious.hellblock.challenges.ProgressBar;
 import com.swiftlicious.hellblock.challenges.requirement.FishRequirement;
 import com.swiftlicious.hellblock.commands.BukkitCommandManager;
 import com.swiftlicious.hellblock.commands.CloudDependencyHelper;
-import com.swiftlicious.hellblock.commands.sub.DebugWorldsCommand;
-import com.swiftlicious.hellblock.commands.sub.HellblockIslandBioCommand;
 import com.swiftlicious.hellblock.config.ConfigManager;
-import com.swiftlicious.hellblock.config.locale.MessageConstants;
 import com.swiftlicious.hellblock.config.locale.TranslationManager;
 import com.swiftlicious.hellblock.coop.CoopManager;
 import com.swiftlicious.hellblock.creation.addons.IntegrationManager;
@@ -48,22 +54,28 @@ import com.swiftlicious.hellblock.database.dependency.DependencyManager;
 import com.swiftlicious.hellblock.database.dependency.classpath.ReflectionClassPathAppender;
 import com.swiftlicious.hellblock.database.dependency.relocation.RelocationHandler;
 import com.swiftlicious.hellblock.effects.EffectManager;
+import com.swiftlicious.hellblock.enchantment.CrimsonThorns;
+import com.swiftlicious.hellblock.enchantment.LavaVision;
 import com.swiftlicious.hellblock.enchantment.MagmaWalker;
+import com.swiftlicious.hellblock.enchantment.MoltenCore;
 import com.swiftlicious.hellblock.events.HellblockReloadEvent;
 import com.swiftlicious.hellblock.generation.BiomeHandler;
 import com.swiftlicious.hellblock.generation.BorderHandler;
 import com.swiftlicious.hellblock.generation.HellblockHandler;
 import com.swiftlicious.hellblock.generation.IslandChoiceConverter;
 import com.swiftlicious.hellblock.generation.IslandGenerator;
+import com.swiftlicious.hellblock.generation.IslandManager;
 import com.swiftlicious.hellblock.generation.IslandPlacementDetector;
 import com.swiftlicious.hellblock.gui.biome.BiomeGUIManager;
 import com.swiftlicious.hellblock.gui.challenges.ChallengesGUIManager;
 import com.swiftlicious.hellblock.gui.choice.IslandChoiceGUIManager;
 import com.swiftlicious.hellblock.gui.display.DisplaySettingsGUIManager;
+import com.swiftlicious.hellblock.gui.event.EventGUIManager;
 import com.swiftlicious.hellblock.gui.flags.FlagsGUIManager;
 import com.swiftlicious.hellblock.gui.hellblock.HellblockGUIManager;
 import com.swiftlicious.hellblock.gui.invite.InviteGUIManager;
 import com.swiftlicious.hellblock.gui.market.MarketManager;
+import com.swiftlicious.hellblock.gui.notification.NotificationGUIManager;
 import com.swiftlicious.hellblock.gui.party.PartyGUIManager;
 import com.swiftlicious.hellblock.gui.reset.ResetConfirmGUIManager;
 import com.swiftlicious.hellblock.gui.schematic.SchematicGUIManager;
@@ -72,21 +84,27 @@ import com.swiftlicious.hellblock.gui.visit.VisitGUIManager;
 import com.swiftlicious.hellblock.handlers.AbstractActionManager;
 import com.swiftlicious.hellblock.handlers.AbstractRequirementManager;
 import com.swiftlicious.hellblock.handlers.ActionManager;
+import com.swiftlicious.hellblock.handlers.AdventureDependencyHelper;
+import com.swiftlicious.hellblock.handlers.AdventureHelper;
 import com.swiftlicious.hellblock.handlers.BlockActionManager;
 import com.swiftlicious.hellblock.handlers.BlockRequirementManager;
 import com.swiftlicious.hellblock.handlers.CoolDownManager;
 import com.swiftlicious.hellblock.handlers.EventManager;
 import com.swiftlicious.hellblock.handlers.HologramManager;
+import com.swiftlicious.hellblock.handlers.IslandActionManager;
+import com.swiftlicious.hellblock.handlers.IslandRequirementManager;
 import com.swiftlicious.hellblock.handlers.PlayerActionManager;
 import com.swiftlicious.hellblock.handlers.PlayerRequirementManager;
 import com.swiftlicious.hellblock.handlers.RequirementManager;
 import com.swiftlicious.hellblock.handlers.VersionHelper;
 import com.swiftlicious.hellblock.handlers.VisitManager;
+import com.swiftlicious.hellblock.handlers.chat.ChatManager;
 import com.swiftlicious.hellblock.listeners.ArmorHandler;
 import com.swiftlicious.hellblock.listeners.BrewingHandler;
 import com.swiftlicious.hellblock.listeners.FarmingHandler;
 import com.swiftlicious.hellblock.listeners.GlowTreeHandler;
 import com.swiftlicious.hellblock.listeners.GolemHandler;
+import com.swiftlicious.hellblock.listeners.HellblockPortalListener;
 import com.swiftlicious.hellblock.listeners.HopperHandler;
 import com.swiftlicious.hellblock.listeners.InfiniteLavaHandler;
 import com.swiftlicious.hellblock.listeners.LevelHandler;
@@ -94,15 +112,17 @@ import com.swiftlicious.hellblock.listeners.MinionHandler;
 import com.swiftlicious.hellblock.listeners.MobSpawnHandler;
 import com.swiftlicious.hellblock.listeners.NetherGeneratorHandler;
 import com.swiftlicious.hellblock.listeners.PiglinBarterHandler;
+import com.swiftlicious.hellblock.listeners.PiglinInvasionHandler;
 import com.swiftlicious.hellblock.listeners.PlayerListener;
+import com.swiftlicious.hellblock.listeners.SkysiegeHandler;
 import com.swiftlicious.hellblock.listeners.ToolsHandler;
 import com.swiftlicious.hellblock.listeners.WitherHandler;
 import com.swiftlicious.hellblock.listeners.WraithHandler;
 import com.swiftlicious.hellblock.listeners.fishing.FishingManager;
 import com.swiftlicious.hellblock.listeners.fishing.HookManager;
 import com.swiftlicious.hellblock.listeners.fishing.StatisticsManager;
-import com.swiftlicious.hellblock.listeners.rain.RainHandler;
-import com.swiftlicious.hellblock.logging.JavaPluginLogger;
+import com.swiftlicious.hellblock.listeners.weather.NetherWeatherManager;
+import com.swiftlicious.hellblock.logging.PlatformLoggerProvider;
 import com.swiftlicious.hellblock.logging.PluginLogger;
 import com.swiftlicious.hellblock.loot.LootManager;
 import com.swiftlicious.hellblock.mechanics.MechanicType;
@@ -118,16 +138,15 @@ import com.swiftlicious.hellblock.sender.SenderFactory;
 import com.swiftlicious.hellblock.upgrades.UpgradeManager;
 import com.swiftlicious.hellblock.utils.EventUtils;
 import com.swiftlicious.hellblock.utils.LocationUtils;
+import com.swiftlicious.hellblock.world.CustomBlockState;
 import com.swiftlicious.hellblock.world.WorldManager;
-
-import io.papermc.lib.PaperLib;
 
 public class HellblockPlugin extends JavaPlugin {
 
 	protected static HellblockPlugin instance;
 
 	protected GlowTreeHandler glowstoneTreeHandler;
-	protected RainHandler lavaRainHandler;
+	protected NetherWeatherManager netherWeatherManager;
 	protected InfiniteLavaHandler infiniteLavaHandler;
 	protected BrewingHandler netherBrewingHandler;
 	protected FarmingHandler farmingManager;
@@ -139,8 +158,11 @@ public class HellblockPlugin extends JavaPlugin {
 	protected WraithHandler wraithHandler;
 	protected WitherHandler witherHandler;
 	protected MinionHandler minionHandler;
+	protected PiglinInvasionHandler invasionHandler;
+	protected SkysiegeHandler skysiegeHandler;
 	protected MobSpawnHandler mobSpawnHandler;
 	protected PlayerListener playerListener;
+	protected HellblockPortalListener portalListener;
 	protected NetherGeneratorHandler netherrackGeneratorHandler;
 	protected IslandGenerator islandGenerator;
 	protected UpgradeManager upgradeManager;
@@ -153,6 +175,7 @@ public class HellblockPlugin extends JavaPlugin {
 	protected SchematicManager schematicManager;
 	protected WorldManager worldManager;
 	protected IslandPlacementDetector placementDetector;
+	protected IslandManager islandManager;
 	protected IslandBackupManager backupManager;
 	protected ChallengeManager challengeManager;
 	protected BorderHandler borderHandler;
@@ -164,6 +187,7 @@ public class HellblockPlugin extends JavaPlugin {
 	protected BukkitSchedulerAdapter scheduler;
 
 	protected VisitManager visitManager;
+	protected ChatManager chatManager;
 	protected LootManager lootManager;
 	protected HologramManager hologramManager;
 	protected HookManager hookManager;
@@ -182,6 +206,8 @@ public class HellblockPlugin extends JavaPlugin {
 	protected HellblockGUIManager hellblockGUIManager;
 	protected BiomeGUIManager biomeGUIManager;
 	protected FlagsGUIManager flagsGUIManager;
+	protected EventGUIManager eventGUIManager;
+	protected NotificationGUIManager notificationGUIManager;
 	protected UpgradeGUIManager upgradeGUIManager;
 	protected PartyGUIManager partyGUIManager;
 	protected InviteGUIManager inviteGUIManager;
@@ -194,17 +220,33 @@ public class HellblockPlugin extends JavaPlugin {
 	protected StorageManager storageManager;
 	protected DependencyManager dependencyManager;
 	protected TranslationManager translationManager;
-	protected CloudDependencyHelper cloudDependencyHelper;
 
+	protected CloudDependencyHelper cloudDependencyHelper;
+	protected AdventureDependencyHelper adventureDependencyHelper;
+
+	protected LavaVision lavaVision;
+	protected CrimsonThorns crimsonThorns;
+	protected MoltenCore moltenCore;
 	protected MagmaWalker magmaWalker;
 
 	protected TpsMonitor tpsMonitor;
+	protected Metrics bStats;
 
 	protected final Map<Class<?>, ActionManager<?>> actionManagers = new HashMap<>();
 	protected final Map<Class<?>, RequirementManager<?>> requirementManagers = new HashMap<>();
 
+	private static final String ANSI_RESET = "\u001B[0m";
+	private static final String ANSI_RED = "\u001B[31m";
+	private static final String ANSI_GREEN = "\u001B[32m";
+	private static final String ANSI_YELLOW = "\u001B[33m";
+	private static final String ANSI_CYAN = "\u001B[36m";
+
+	protected long startTime = 0L;
+	protected boolean initialStartup = false;
 	protected boolean updateAvailable = false;
 	protected boolean isReloading = false;
+	protected boolean isLoaded = false;
+
 	protected Consumer<Supplier<String>> debugger = (supplier -> {
 	});
 
@@ -214,26 +256,130 @@ public class HellblockPlugin extends JavaPlugin {
 	@Override
 	public void onLoad() {
 		instance = this;
-		this.pluginLogger = new JavaPluginLogger(this.getLogger());
-		VersionHelper.init(Bukkit.getBukkitVersion().split("-")[0]);
-		this.scheduler = new BukkitSchedulerAdapter(this);
-		this.dependencyManager = new DependencyManager(this, new ReflectionClassPathAppender(this.getClassLoader()));
-		final Set<Dependency> dependencies = new HashSet<>(Arrays.asList(Dependency.values()));
-		dependencies.removeAll(RelocationHandler.DEPENDENCIES);
-		getPluginLogger().info("Preloading %s dependencies...".formatted(dependencies.size()));
-		this.dependencyManager.loadDependencies(dependencies);
-		this.cloudDependencyHelper = new CloudDependencyHelper(this);
+		this.pluginLogger = PlatformLoggerProvider.forCurrentPlatform(this);
+
+		// --- Detect version & runtime target ---
+		String bukkitVersion = Bukkit.getBukkitVersion().split("-")[0];
+		boolean isPaper = VersionHelper.isPaperForkPreInit(); // lightweight check
+		String internalVersion = VersionHelper.resolveInternalVersion(bukkitVersion);
+		String platform = isPaper ? "paper" : "spigot";
+
+		// e.g. paper-v1_21_R6.jar
+		String artifactName = String.format("%s-v%s.jar", platform, internalVersion);
+		String resourcePath = "runtime/" + artifactName + ".gz";
+
+		File runtimeDir = new File(getDataFolder(), "runtime");
+		File target = new File(runtimeDir, artifactName);
+		File hashFile = new File(runtimeDir, artifactName + ".sha1");
+
+		try {
+			// --- Ensure runtime directory exists ---
+			if (!runtimeDir.exists() && !runtimeDir.mkdirs()) {
+				getPluginLogger().severe("Failed to create runtime directory: " + runtimeDir);
+				return;
+			}
+
+			// --- Compute hash of embedded gzipped resource ---
+			String newHash;
+			try (InputStream rawIn = getResource(resourcePath)) {
+				if (rawIn == null) {
+					getPluginLogger().severe("Missing gzipped runtime jar inside plugin resources: " + resourcePath);
+					return;
+				}
+				try (GZIPInputStream gzIn = new GZIPInputStream(rawIn)) {
+					newHash = computeSHA1(gzIn);
+				}
+			}
+
+			// --- Compare hashes to decide extraction ---
+			String oldHash = hashFile.exists() ? Files.readString(hashFile.toPath()).trim() : null;
+			boolean shouldExtract = !target.exists() || !newHash.equals(oldHash);
+
+			if (shouldExtract) {
+				getPluginLogger().info("Extracting runtime jar: " + artifactName);
+
+				try (InputStream rawIn = getResource(resourcePath)) {
+					if (rawIn == null) {
+						getPluginLogger()
+								.severe("Missing gzipped runtime jar inside plugin resources: " + resourcePath);
+						return;
+					}
+
+					try (GZIPInputStream gzIn = new GZIPInputStream(rawIn)) {
+						Files.copy(gzIn, target.toPath(), StandardCopyOption.REPLACE_EXISTING);
+					}
+				}
+
+				Files.writeString(hashFile.toPath(), newHash, StandardOpenOption.CREATE,
+						StandardOpenOption.TRUNCATE_EXISTING);
+				getPluginLogger().info("Extracted updated runtime jar: " + artifactName);
+			}
+
+			// --- Add runtime jar to classpath BEFORE initializing VersionHelper ---
+			ReflectionClassPathAppender appender = new ReflectionClassPathAppender(this.getClassLoader());
+			appender.addJarToClasspath(target.toPath());
+			getPluginLogger().info("Injected runtime jar: " + artifactName);
+
+			// --- Initialize version helpers (now runtime classes are available) ---
+			VersionHelper.init(bukkitVersion);
+
+			// --- Dependency setup ---
+			this.scheduler = new BukkitSchedulerAdapter(this);
+			this.dependencyManager = new DependencyManager(this, appender);
+
+			final Set<Dependency> dependencies = EnumSet.allOf(Dependency.class);
+			dependencies.removeAll(Stream
+					.of(RelocationHandler.RELOCATION_DEPENDENCIES, CloudDependencyHelper.CLOUD_DEPENDENCIES,
+							AdventureDependencyHelper.ADVENTURE_DEPENDENCIES)
+					.flatMap(Set::stream).collect(Collectors.toSet()));
+
+			getPluginLogger().info("Preloading %s dependencies...".formatted(dependencies.size()));
+			this.dependencyManager.loadDependencies(dependencies);
+
+			// Initialize Cloud & Adventure helpers (which use isolated runtime)
+			this.cloudDependencyHelper = new CloudDependencyHelper(this);
+			this.cloudDependencyHelper.load();
+
+			this.adventureDependencyHelper = new AdventureDependencyHelper(this);
+			this.adventureDependencyHelper.load();
+
+			this.isLoaded = true;
+
+		} catch (Throwable t) {
+			getPluginLogger().severe("Failed during runtime jar injection or dependency loading: " + artifactName);
+			t.printStackTrace();
+		}
+	}
+
+	/**
+	 * Computes SHA-1 hash for identifying runtime updates.
+	 */
+	private static String computeSHA1(InputStream in) throws IOException, NoSuchAlgorithmException {
+		MessageDigest digest = MessageDigest.getInstance("SHA-1");
+		try (DigestInputStream dis = new DigestInputStream(in, digest)) {
+			dis.transferTo(OutputStream.nullOutputStream());
+		}
+		byte[] hashBytes = digest.digest();
+		StringBuilder sb = new StringBuilder();
+		for (byte b : hashBytes)
+			sb.append(String.format("%02x", b));
+		return sb.toString();
 	}
 
 	/**
 	 * Enables the plugin and initializes its components.
 	 */
-	@SuppressWarnings("deprecation")
 	@Override
 	public void onEnable() {
-		final double startTime = System.currentTimeMillis();
+		if (!this.isLoaded) {
+			getPluginLogger().severe("Hellblock was unable to setup correctly.");
+			getPluginLogger().severe("Disabling plugin...");
+			Bukkit.getPluginManager().disablePlugin(this);
+			return;
+		}
 
-		// TODO: test support from 1.17 to 1.21.10+
+		this.startTime = System.currentTimeMillis();
+
 		if (!VersionHelper.getSupportedVersions().contains(VersionHelper.getServerVersion())) {
 			getPluginLogger().severe(
 					"Hellblock only supports legacy versions down to 1.17. Please update your server to be able to properly use this plugin.");
@@ -242,27 +388,14 @@ public class HellblockPlugin extends JavaPlugin {
 			return;
 		}
 
-		// TODO: test spigot
-		if (!VersionHelper.isPaper()) {
-			getPluginLogger().severe("Hellblock is more suited towards Paper, but will still work with Spigot.");
-			PaperLib.suggestPaper(this);
-		}
-
-		if (getScheduler() == null) {
-			getPluginLogger().severe("Hellblock was unable to setup correctly.");
-			getPluginLogger().severe("Disabling plugin...");
-			Bukkit.getPluginManager().disablePlugin(this);
-			return;
-		}
-
-		tpsMonitor = new TpsMonitor();
+		this.tpsMonitor = new TpsMonitor();
 		// Schedule a repeating task every tick to record TPS samples
-		getScheduler().sync().runRepeating(() -> this.tpsMonitor.onTick(), 1L, 1L,
-				LocationUtils.getAnyLocationInstance());
+		getScheduler().sync().runRepeating(getTpsMonitor()::onTick, 1L, 1L, LocationUtils.getAnyLocationInstance());
 
 		this.translationManager = new TranslationManager(this);
-		registerManager(Player.class, new PlayerRequirementManager(this), new PlayerActionManager(this));
-		registerManager(BlockData.class, new BlockRequirementManager(this), new BlockActionManager(this));
+		registerDataManager(Player.class, new PlayerRequirementManager(this), new PlayerActionManager(this));
+		registerDataManager(CustomBlockState.class, new BlockRequirementManager(this), new BlockActionManager(this));
+		registerDataManager(Integer.class, new IslandRequirementManager(this), new IslandActionManager(this));
 		this.placeholderManager = new PlaceholderManager(this);
 		this.lootManager = new LootManager(this);
 		this.effectManager = new EffectManager(this);
@@ -272,22 +405,27 @@ public class HellblockPlugin extends JavaPlugin {
 		this.blockManager = new BlockManager(this);
 		this.hookManager = new HookManager(this);
 		this.configManager = new ConfigManager(this);
-		this.itemManager.init();
-		this.entityManager.init();
-		this.blockManager.init();
+		this.itemManager.registerProviders();
+		this.entityManager.registerProviders();
+		this.blockManager.registerProviders();
 		// after ConfigManager
-		this.debugger = getConfigManager().debug() ? (s) -> pluginLogger.info("[DEBUG] " + s.get()) : (s) -> {
+		this.debugger = getConfigManager().debug() ? (s) -> getPluginLogger().info("[DEBUG] " + s.get()) : (s) -> {
 		};
-
 		this.coopManager = new CoopManager(this);
+		this.islandManager = new IslandManager(this);
 		this.storageManager = new StorageManager(this);
-		this.storageManager.init();
+		this.storageManager.initialize();
 		this.storageManager.reload();
+
 		this.magmaWalker = new MagmaWalker(this);
+		this.moltenCore = new MoltenCore(this);
+		this.crimsonThorns = new CrimsonThorns(this);
+		this.lavaVision = new LavaVision(this);
 		this.visitManager = new VisitManager(this);
+		this.chatManager = new ChatManager(this);
 		this.mailboxManager = new MailboxManager(this);
 		this.netherrackGeneratorHandler = new NetherGeneratorHandler(this);
-		this.lavaRainHandler = new RainHandler(this);
+		this.netherWeatherManager = new NetherWeatherManager(this);
 		this.farmingManager = new FarmingHandler(this);
 		this.islandGenerator = new IslandGenerator(this);
 		this.netherBrewingHandler = new BrewingHandler(this);
@@ -296,6 +434,8 @@ public class HellblockPlugin extends JavaPlugin {
 		this.witherHandler = new WitherHandler(this);
 		this.wraithHandler = new WraithHandler(this);
 		this.minionHandler = new MinionHandler(this);
+		this.skysiegeHandler = new SkysiegeHandler(this);
+		this.invasionHandler = new PiglinInvasionHandler(this);
 		this.biomeHandler = new BiomeHandler(this);
 		this.borderHandler = new BorderHandler(this);
 		this.mobSpawnHandler = new MobSpawnHandler(this);
@@ -305,26 +445,29 @@ public class HellblockPlugin extends JavaPlugin {
 		this.islandLevelManager = new LevelHandler(this);
 		this.protectionManager = new ProtectionManager(this);
 		this.challengeManager = new ChallengeManager(this);
+		this.adventureDependencyHelper.createBukkitAudiences();
 		this.senderFactory = new BukkitSenderFactory(this);
 		this.fishingManager = new FishingManager(this);
-		this.backupManager = new IslandBackupManager(this, getDataFolder());
+		this.backupManager = new IslandBackupManager(this);
 		this.hellblockGUIManager = new HellblockGUIManager(this);
 		this.biomeGUIManager = new BiomeGUIManager(this);
 		this.flagsGUIManager = new FlagsGUIManager(this);
 		this.upgradeGUIManager = new UpgradeGUIManager(this);
 		this.partyGUIManager = new PartyGUIManager(this);
+		this.notificationGUIManager = new NotificationGUIManager(this);
 		this.visitGUIManager = new VisitGUIManager(this);
 		this.displaySettingsGUIManager = new DisplaySettingsGUIManager(this);
 		this.challengesGUIManager = new ChallengesGUIManager(this);
+		this.eventGUIManager = new EventGUIManager(this);
 		this.islandChoiceGUIManager = new IslandChoiceGUIManager(this);
 		this.schematicGUIManager = new SchematicGUIManager(this);
 		this.inviteGUIManager = new InviteGUIManager(this);
 		this.resetConfirmGUIManager = new ResetConfirmGUIManager(this);
 		this.cooldownManager = new CoolDownManager(this);
-		this.cooldownManager.init();
 		this.playerListener = new PlayerListener(this);
+		this.portalListener = new HellblockPortalListener(this);
 		this.integrationManager = new IntegrationManager(this);
-		this.integrationManager.init();
+		this.integrationManager.initialize();
 		this.upgradeManager = new UpgradeManager(this);
 		this.hellblockHandler = new HellblockHandler(this);
 		this.marketManager = new MarketManager(this);
@@ -334,102 +477,16 @@ public class HellblockPlugin extends JavaPlugin {
 		this.worldManager = new WorldManager(this);
 		this.commandManager = new BukkitCommandManager(this);
 		// Run after plugin fully loads, ensures main loader context
-		getScheduler().executeSync(() -> this.commandManager.registerDefaultFeatures());
+		getScheduler().executeSync(getCommandManager()::registerDefaultFeatures);
 		this.netherToolsHandler = new ToolsHandler(this);
 		this.netherArmorHandler = new ArmorHandler(this);
 		this.piglinBarterHandler = new PiglinBarterHandler(this);
 		this.hellGolemHandler = new GolemHandler(this);
-
-		this.placementDetector.initialize();
-
-		DebugWorldsCommand.startCachingTileEntities(5);
-
-		if (getConfigManager().metrics()) {
-			new Metrics(this, 23739);
-		}
-
-		if (getConfigManager().checkUpdate()) {
-			VersionHelper.checkUpdate.apply(this).thenAccept(result -> {
-				final String link = "https://github.com/Swiftlicious01/Hellblock/releases";
-				if (!result) {
-					getPluginLogger().info("You are using the latest version.");
-				} else {
-					getPluginLogger().info("Update is available: %s".formatted(link));
-					this.updateAvailable = true;
-				}
-			});
-		}
-
-		final double finishedTime = System.currentTimeMillis();
-		final double finalTime = (finishedTime - startTime) / 1000;
-		getPluginLogger().info("Took %s seconds to setup Hellblock!".formatted(finalTime));
-
-		for (UserData onlineUser : getStorageManager().getOnlineUsers()) {
-			final Player player = onlineUser.getPlayer();
-			if (player == null) {
-				continue;
-			}
-			final UUID playerId = player.getUniqueId();
-
-			// Synchronous setup
-			onlineUser.startSpawningAnimals();
-			onlineUser.startSpawningFortressMobs();
-			getFarmingManager().updateCrops(player.getWorld(), player);
-			getIslandLevelManager().loadCache(playerId);
-			getNetherrackGeneratorHandler().loadPistons(playerId);
-
-			// Handle visiting-island bans asynchronously
-			getHellblockHandler().handleVisitingIsland(player, onlineUser);
-		}
-
-		getHellblockHandler().purgeInactiveHellblocks();
-
-		// Case 1: Owner online
-		// Case 2: Coop member online (async lookup)
-		// only need one online coop member
-		// 15 minutes = 15 * 60 seconds * 20 ticks
-		// divide across # of owners
-		getScheduler().asyncRepeating(() -> getCoopManager().getAllIslandOwners().thenAccept(ownerIds -> {
-			if (ownerIds.isEmpty()) {
-				return;
-			}
-			final int total = ownerIds.size();
-			final long intervalSeconds = (15 * 60) / total;
-			final AtomicInteger index = new AtomicInteger(0);
-			for (UUID ownerId : ownerIds) {
-				final long delay = intervalSeconds * index.getAndIncrement();
-				if (Bukkit.getPlayer(ownerId) != null) {
-					getScheduler().asyncLater(() -> {
-						instance.getPluginLogger()
-								.info("Scheduled snapshot for island owner " + ownerId + " (owner online)");
-						getIslandBackupManager().maybeSnapshot(ownerId);
-					}, delay, TimeUnit.SECONDS);
-					continue;
-				}
-				getCoopManager().getAllCoopMembers(ownerId).thenAccept(members -> {
-					for (UUID memberId : members) {
-						if (Bukkit.getPlayer(memberId) != null) {
-							getScheduler().asyncLater(() -> {
-								instance.getPluginLogger().info("Scheduled snapshot for island owner " + ownerId
-										+ " (coop member online: " + memberId + ")");
-								getIslandBackupManager().maybeSnapshot(ownerId);
-							}, delay, TimeUnit.SECONDS);
-							break;
-						}
-					}
-				});
-			}
-		}), 15, 15, TimeUnit.MINUTES);
-		// every 15 minutes
+		this.initialStartup = true;
 
 		// Use scheduler to allow other plugins to load before reloading to prevent
 		// conflicts
-		if (VersionHelper.isFolia()) {
-			Bukkit.getGlobalRegionScheduler().run(this, (scheduledTask) -> this.reload());
-		} else {
-			Bukkit.getScheduler().runTask(this, this::reload);
-		}
-
+		runReloadTask(this, this::reload);
 	}
 
 	/**
@@ -445,10 +502,11 @@ public class HellblockPlugin extends JavaPlugin {
 				if (!onlineUser.isOnline()) {
 					continue;
 				}
-				onlineUser.stopSpawningAnimals();
-				onlineUser.stopSpawningFortressMobs();
-				getIslandLevelManager().saveCache(onlineUser.getUUID());
-				getNetherrackGeneratorHandler().savePistons(onlineUser.getUUID());
+				if (getIslandManager() != null)
+					getIslandManager().resolveIslandId(onlineUser.getPlayer().getLocation())
+							.thenAccept(optIslandId -> optIslandId.ifPresent(islandId -> getIslandManager()
+									.handlePlayerLeaveIsland(onlineUser.getPlayer(), islandId)));
+
 				final Player player = onlineUser.getPlayer();
 				if ((onlineUser.hasGlowstoneToolEffect() || onlineUser.hasGlowstoneArmorEffect())
 						&& player.hasPotionEffect(PotionEffectType.NIGHT_VISION)) {
@@ -459,22 +517,96 @@ public class HellblockPlugin extends JavaPlugin {
 			}
 		}
 
-		Bukkit.getWorlds().forEach(world -> {
-			if (VersionHelper.isPaper()) {
-				try {
-					Method removeTickets = World.class.getMethod("removePluginChunkTickets", Plugin.class);
-					removeTickets.invoke(world, this);
-					debug(() -> "Cleared plugin chunk tickets for world: " + world.getName());
-				} catch (Exception e) {
-					// Optional: log failure or ignore silently
-				}
-			}
-		});
+		if (getCommandManager() != null && getCommandManager().getWorldTileHelper() != null) {
+			getCommandManager().getWorldTileHelper().stopCachingTileEntities();
+		}
 
-		DebugWorldsCommand.stopCachingTileEntities();
-
-		if (this.lavaRainHandler != null) {
-			this.lavaRainHandler.disable();
+		if (this.netherWeatherManager != null) {
+			this.netherWeatherManager.disable();
+		}
+		if (this.bStats != null) {
+			this.bStats.shutdown();
+		}
+		if (this.magmaWalker != null) {
+			this.magmaWalker.disable();
+		}
+		if (this.moltenCore != null) {
+			this.moltenCore.disable();
+		}
+		if (this.crimsonThorns != null) {
+			this.crimsonThorns.disable();
+		}
+		if (this.lavaVision != null) {
+			this.lavaVision.disable();
+		}
+		if (this.schematicManager != null) {
+			this.schematicManager.disable();
+		}
+		if (this.protectionManager != null) {
+			this.protectionManager.disable();
+		}
+		if (this.coopManager != null) {
+			this.coopManager.disable();
+		}
+		if (this.portalListener != null) {
+			this.portalListener.disable();
+		}
+		if (this.challengeManager != null) {
+			this.challengeManager.disable();
+		}
+		if (this.farmingManager != null) {
+			this.farmingManager.disable();
+		}
+		if (this.hopperHandler != null) {
+			this.hopperHandler.disable();
+		}
+		if (this.upgradeManager != null) {
+			this.upgradeManager.disable();
+		}
+		if (this.netherrackGeneratorHandler != null) {
+			this.netherrackGeneratorHandler.disable();
+		}
+		if (this.glowstoneTreeHandler != null) {
+			this.glowstoneTreeHandler.disable();
+		}
+		if (this.infiniteLavaHandler != null) {
+			this.infiniteLavaHandler.disable();
+		}
+		if (this.piglinBarterHandler != null) {
+			this.piglinBarterHandler.disable();
+		}
+		if (this.hellGolemHandler != null) {
+			this.hellGolemHandler.disable();
+		}
+		if (this.minionHandler != null) {
+			this.minionHandler.disable();
+		}
+		if (this.skysiegeHandler != null) {
+			this.skysiegeHandler.disable();
+		}
+		if (this.invasionHandler != null) {
+			this.invasionHandler.disable();
+		}
+		if (this.witherHandler != null) {
+			this.witherHandler.disable();
+		}
+		if (this.chatManager != null) {
+			this.chatManager.disable();
+		}
+		if (this.mobSpawnHandler != null) {
+			this.mobSpawnHandler.disable();
+		}
+		if (this.wraithHandler != null) {
+			this.wraithHandler.disable();
+		}
+		if (this.borderHandler != null) {
+			this.borderHandler.disable();
+		}
+		if (this.placementDetector != null) {
+			this.placementDetector.disable();
+		}
+		if (this.islandGenerator != null) {
+			this.islandGenerator.disable();
 		}
 		if (this.playerListener != null) {
 			this.playerListener.disable();
@@ -494,14 +626,32 @@ public class HellblockPlugin extends JavaPlugin {
 		if (this.lootManager != null) {
 			this.lootManager.disable();
 		}
+		if (this.backupManager != null) {
+			this.backupManager.disable();
+		}
+		if (this.eventManager != null) {
+			this.eventManager.disable();
+		}
 		if (this.marketManager != null) {
 			this.marketManager.disable();
+		}
+		if (this.islandManager != null) {
+			this.islandManager.disable();
+		}
+		if (this.visitManager != null) {
+			this.visitManager.disable();
 		}
 		if (this.hellblockGUIManager != null) {
 			this.hellblockGUIManager.disable();
 		}
 		if (this.visitGUIManager != null) {
 			this.visitGUIManager.disable();
+		}
+		if (this.eventGUIManager != null) {
+			this.eventGUIManager.disable();
+		}
+		if (this.notificationGUIManager != null) {
+			this.notificationGUIManager.disable();
 		}
 		if (this.biomeGUIManager != null) {
 			this.biomeGUIManager.disable();
@@ -539,21 +689,51 @@ public class HellblockPlugin extends JavaPlugin {
 		if (this.integrationManager != null) {
 			this.integrationManager.disable();
 		}
-		if (this.storageManager != null) {
-			this.storageManager.shutdownPreloadExecutor();
-			this.storageManager.disable();
+		if (this.cooldownManager != null) {
+			this.cooldownManager.disable();
 		}
 		if (this.worldManager != null) {
 			this.worldManager.disable();
+		}
+		if (this.islandLevelManager != null) {
+			this.islandLevelManager.disable();
+		}
+		if (this.hologramManager != null) {
+			this.hologramManager.disable();
+		}
+		if (this.statisticsManager != null) {
+			this.statisticsManager.disable();
+		}
+		if (this.netherToolsHandler != null) {
+			this.netherToolsHandler.disable();
+		}
+		if (this.netherArmorHandler != null) {
+			this.netherArmorHandler.disable();
+		}
+		if (this.netherBrewingHandler != null) {
+			this.netherBrewingHandler.disable();
+		}
+		if (this.hellblockHandler != null) {
+			this.hellblockHandler.disable();
+		}
+		if (this.senderFactory != null) {
+			this.senderFactory.close();
+		}
+		if (this.actionManagers != null) {
+			this.actionManagers.values().stream().filter(Objects::nonNull).forEach(Reloadable::disable);
+		}
+		if (this.requirementManagers != null) {
+			this.requirementManagers.values().stream().filter(Objects::nonNull).forEach(Reloadable::disable);
+		}
+		if (this.storageManager != null) {
+			this.storageManager.shutdownPreloadExecutor();
+			this.storageManager.disable();
 		}
 		if (this.placeholderManager != null) {
 			this.placeholderManager.disable();
 		}
 		if (this.hookManager != null) {
 			this.hookManager.disable();
-		}
-		if (this.cooldownManager != null) {
-			this.cooldownManager.disable();
 		}
 		if (this.commandManager != null) {
 			this.commandManager.unregisterFeatures();
@@ -574,7 +754,11 @@ public class HellblockPlugin extends JavaPlugin {
 	 */
 	public void reload() {
 		this.isReloading = true;
+
+		AdventureHelper.resetInstance();
 		MechanicType.reset();
+		ProgressBar.clearColorCache();
+		getCommandManager().getWorldTileHelper().stopCachingTileEntities();
 		this.itemManager.unload();
 		this.eventManager.unload();
 		this.entityManager.unload();
@@ -582,72 +766,196 @@ public class HellblockPlugin extends JavaPlugin {
 		this.blockManager.unload();
 		this.effectManager.unload();
 		this.hookManager.unload();
+		this.worldManager.unload();
 		this.actionManagers.values().forEach(Reloadable::reload);
 		this.requirementManagers.values().forEach(Reloadable::reload);
-		// before ConfigManager
+
+		// Reload early components
 		this.placeholderManager.reload();
 		this.configManager.reload();
-		// after ConfigManager
-		this.debugger = getConfigManager().debug() ? (s) -> pluginLogger.info("[DEBUG] " + s.get()) : (s) -> {
+
+		// Re-assign debugger
+		this.debugger = getConfigManager().debug() ? (s) -> getPluginLogger().info("[DEBUG] " + s.get()) : (s) -> {
 		};
-		HellblockIslandBioCommand.precompileBannedWordPatterns(configManager.bannedWords());
-		this.lavaRainHandler.reload();
-		this.cooldownManager.reload();
+
+		if (getConfigManager().metrics()) {
+			this.bStats = new Metrics(this, 23739);
+		}
+
 		this.translationManager.reload();
+		this.netherWeatherManager.reload();
+		this.cooldownManager.reload();
 		this.visitManager.reload();
-		this.hellblockGUIManager.reload();
-		this.biomeGUIManager.reload();
-		this.upgradeGUIManager.reload();
-		this.flagsGUIManager.reload();
-		this.partyGUIManager.reload();
-		this.inviteGUIManager.reload();
-		this.challengesGUIManager.reload();
-		this.islandChoiceGUIManager.reload();
-		this.displaySettingsGUIManager.reload();
-		this.schematicGUIManager.reload();
-		this.visitGUIManager.reload();
-		this.resetConfirmGUIManager.reload();
+		this.islandManager.reload();
 		this.marketManager.reload();
 		this.statisticsManager.reload();
 		this.storageManager.reload();
 		this.fishingManager.reload();
 		this.hologramManager.reload();
-		this.itemManager.load();
-		this.eventManager.load();
-		this.entityManager.load();
-		this.lootManager.load();
-		this.blockManager.load();
-		this.effectManager.load();
-		this.hookManager.load();
-		this.magmaWalker.reload();
-		this.mobSpawnHandler.reload();
-		this.playerListener.reload();
-		this.islandGenerator.reload();
-		this.hellGolemHandler.reload();
-		this.witherHandler.reload();
-		this.minionHandler.reload();
 		this.coopManager.reload();
-		this.borderHandler.reload();
-		this.glowstoneTreeHandler.reload();
-		this.infiniteLavaHandler.reload();
-		this.piglinBarterHandler.reload();
-		this.netherrackGeneratorHandler.reload();
-		this.wraithHandler.reload();
-		this.placementDetector.reload();
-		this.islandLevelManager.reload();
-		this.challengeManager.reload();
-		this.netherToolsHandler.reload();
-		this.netherArmorHandler.reload();
-		this.netherBrewingHandler.reload();
-		this.hopperHandler.reload();
-		this.farmingManager.reload();
-		this.upgradeManager.reload();
-		this.schematicManager.reload();
-		this.worldManager.reload();
-		this.protectionManager.reload();
-		FishRequirement.reloadContents(this);
-		EventUtils.fireAndForget(new HellblockReloadEvent(this));
-		this.isReloading = false;
+		this.worldManager.load();
+
+		getWorldManager().getWorldLoadingCompletion().thenRun(() -> {
+			try {
+				this.protectionManager.reload();
+				this.schematicManager.reload();
+				this.backupManager.reload();
+				this.upgradeManager.reload();
+				this.placementDetector.reload();
+				this.placementDetector.initialize();
+				this.hellblockHandler.reload();
+				this.itemManager.load();
+				this.eventManager.load();
+				this.entityManager.load();
+				this.lootManager.load();
+				this.blockManager.load();
+				this.effectManager.load();
+				this.hookManager.load();
+				this.magmaWalker.reload();
+				this.moltenCore.reload();
+				this.lavaVision.reload();
+				this.crimsonThorns.reload();
+				this.mobSpawnHandler.reload();
+				this.playerListener.reload();
+				this.portalListener.reload();
+				this.chatManager.reload();
+				this.islandGenerator.reload();
+				this.hellGolemHandler.reload();
+				this.witherHandler.reload();
+				this.minionHandler.reload();
+				this.skysiegeHandler.reload();
+				this.borderHandler.reload();
+				this.glowstoneTreeHandler.reload();
+				this.infiniteLavaHandler.reload();
+				this.piglinBarterHandler.reload();
+				this.netherrackGeneratorHandler.reload();
+				this.wraithHandler.reload();
+				this.invasionHandler.reload();
+				this.islandLevelManager.reload();
+				this.hopperHandler.reload();
+				this.farmingManager.reload();
+
+				FishRequirement.reloadContents(this);
+
+				this.challengeManager.reload();
+				this.netherToolsHandler.reload();
+				this.netherArmorHandler.reload();
+				this.netherBrewingHandler.reload();
+				this.hellblockGUIManager.reload();
+				this.biomeGUIManager.reload();
+				this.upgradeGUIManager.reload();
+				this.flagsGUIManager.reload();
+				this.partyGUIManager.reload();
+				this.inviteGUIManager.reload();
+				this.challengesGUIManager.reload();
+				this.islandChoiceGUIManager.reload();
+				this.notificationGUIManager.reload();
+				this.displaySettingsGUIManager.reload();
+				this.schematicGUIManager.reload();
+				this.visitGUIManager.reload();
+				this.eventGUIManager.reload();
+				this.resetConfirmGUIManager.reload();
+
+				getCommandManager().getWorldTileHelper().startCachingTileEntities(200L);
+				getCommandManager().getBioPatternHelper()
+						.precompileBannedWordPatterns(getConfigManager().bannedWords());
+
+				// Handle online users
+				for (UserData onlineUser : getStorageManager().getOnlineUsers()) {
+					final Player player = onlineUser.getPlayer();
+					if (player != null && player.isOnline()) {
+						getIslandManager().resolveIslandId(player.getLocation()).thenAccept(optIslandId -> optIslandId
+								.ifPresent(islandId -> getIslandManager().handlePlayerEnterIsland(player, islandId)));
+						getHellblockHandler().handleVisitingIsland(player, onlineUser);
+					}
+				}
+
+				// Purge inactive Hellblocks
+				getHellblockHandler().purgeInactiveHellblocks().thenRun(() -> {
+					if (this.initialStartup) {
+						double finalTime = (System.currentTimeMillis() - this.startTime) / 1000.0;
+						getPluginLogger().info("Took " + finalTime + " second" + (finalTime == 1.0 ? "" : "s")
+								+ " to setup Hellblock!");
+						this.initialStartup = false;
+					}
+					EventUtils.fireAndForget(new HellblockReloadEvent(this));
+					this.isReloading = false;
+				}).exceptionally(ex -> {
+					getPluginLogger().severe("HellblockHandler failed to purge inactive hellblocks: " + ex.getMessage(),
+							ex);
+					this.isReloading = false;
+					return null;
+				});
+			} catch (Exception ex) {
+				getPluginLogger().severe("Exception during plugin reload after world loading: " + ex.getMessage(), ex);
+				this.isReloading = false;
+			}
+		}).exceptionally(ex -> {
+			getPluginLogger().severe("WorldManager failed to load worlds: " + ex.getMessage(), ex);
+			this.isReloading = false;
+			return null;
+		}).thenRun(() -> {
+			if (getConfigManager().checkUpdate()) {
+				VersionHelper.checkUpdate.apply(this).thenAccept(result -> {
+					getPluginLogger().info(colorLog(ANSI_CYAN, "Checking for updates..."));
+					final String link = "https://github.com/Swiftlicious01/Hellblock/releases";
+					final String current = VersionHelper.getCurrentVersion();
+					final String latest = VersionHelper.getLatestVersion();
+
+					if (!result) {
+						getPluginLogger().info(
+								colorLog(ANSI_GREEN, "You are using the latest version (v%s).".formatted(current)));
+					} else {
+						String message = String.format(
+								"%s===============================================\n"
+										+ "      A new version of %sHellblock%s is available!\n"
+										+ "      Current version: %s\n" + "      Latest version:  %s\n"
+										+ "      Download: %s\n" + "===============================================%s",
+								ANSI_YELLOW, ANSI_RED, ANSI_YELLOW, current, latest, link, ANSI_RESET);
+
+						getPluginLogger().warn(colorLog(ANSI_YELLOW, message));
+						this.updateAvailable = true;
+					}
+				}).exceptionally(ex -> {
+					getPluginLogger().severe("VersionHelper failed to check for updates: " + ex.getMessage(), ex);
+					return null;
+				});
+			}
+		});
+	}
+
+	/**
+	 * Executes a plugin reload task using the appropriate scheduler for the current
+	 * server platform (Folia, Paper, or Spigot).
+	 * <p>
+	 * This method automatically detects whether the server is running on Folia and,
+	 * if so, uses the {@code GlobalRegionScheduler} to execute the task in a
+	 * thread-safe manner. When running on Spigot or other non-Folia platforms, it
+	 * gracefully falls back to the standard Bukkit scheduler.
+	 * <p>
+	 * Using this method allows plugin developers to safely execute reload or
+	 * synchronous tasks without introducing compile-time dependencies on Folia
+	 * APIs.
+	 *
+	 * @param plugin the plugin instance requesting the reload operation
+	 * @param task   the task to execute (typically {@code this::reload})
+	 */
+	private void runReloadTask(@NotNull Plugin plugin, @NotNull Runnable task) {
+		if (VersionHelper.isPaperFork()) {
+			try {
+				Method method = Bukkit.class.getMethod("getGlobalRegionScheduler");
+				Object scheduler = method.invoke(null);
+
+				Method runMethod = scheduler.getClass().getMethod("run", Plugin.class, Consumer.class);
+				runMethod.invoke(scheduler, plugin, (Consumer<Object>) (scheduledTask) -> task.run());
+				return;
+			} catch (ReflectiveOperationException e) {
+				getPluginLogger().warn("Failed to use Folia global region scheduler: " + e.getMessage());
+			}
+		}
+
+		// Fallback to standard Spigot scheduler
+		Bukkit.getScheduler().runTask(plugin, task);
 	}
 
 	/**
@@ -655,7 +963,7 @@ public class HellblockPlugin extends JavaPlugin {
 	 *
 	 * @return the hellblock plugin instance
 	 */
-	@Nullable
+	@NotNull
 	public static HellblockPlugin getInstance() {
 		if (instance == null) {
 			throw new IllegalArgumentException("Plugin not initialized");
@@ -694,6 +1002,16 @@ public class HellblockPlugin extends JavaPlugin {
 	}
 
 	/**
+	 * Gets the island manager for handling island-related functionality.
+	 *
+	 * @return the island manager
+	 */
+	@NotNull
+	public IslandManager getIslandManager() {
+		return this.islandManager;
+	}
+
+	/**
 	 * Gets the schematic manager for handling schematic-related functionality.
 	 *
 	 * @return the schematic manager
@@ -711,6 +1029,16 @@ public class HellblockPlugin extends JavaPlugin {
 	@NotNull
 	public WorldManager getWorldManager() {
 		return this.worldManager;
+	}
+
+	/**
+	 * Gets the chat manager for handling chat-related functionality.
+	 *
+	 * @return the chat manager
+	 */
+	@NotNull
+	public ChatManager getChatManager() {
+		return this.chatManager;
 	}
 
 	/**
@@ -753,19 +1081,67 @@ public class HellblockPlugin extends JavaPlugin {
 		return this.tpsMonitor;
 	}
 
+	/**
+	 * Gets the mailbox manager for handling mailbox-related functionality.
+	 *
+	 * @return the mailbox manager
+	 */
 	@NotNull
 	public MailboxManager getMailboxManager() {
 		return this.mailboxManager;
 	}
 
+	/**
+	 * Gets the cloud dependency helper for handling cloud dependency-related
+	 * functionality.
+	 *
+	 * @return the cloud dependency helper
+	 */
 	@NotNull
 	public CloudDependencyHelper getCloudDependencyHelper() {
 		return this.cloudDependencyHelper;
 	}
 
+	/**
+	 * Gets the adventure dependency helper for handling adventure
+	 * dependency-related functionality.
+	 *
+	 * @return the adventure dependency helper
+	 */
+	@NotNull
+	public AdventureDependencyHelper getAdventureDependencyHelper() {
+		return this.adventureDependencyHelper;
+	}
+
+	/**
+	 * Gets the mob spawn handler for handling mob spawn-related functionality.
+	 *
+	 * @return the mob spawn handler
+	 */
 	@NotNull
 	public MobSpawnHandler getMobSpawnHandler() {
 		return this.mobSpawnHandler;
+	}
+
+	/**
+	 * Gets the piglin invasion handler for handling piglin invasion-related
+	 * functionality.
+	 *
+	 * @return the piglin invasion handler
+	 */
+	@NotNull
+	public PiglinInvasionHandler getInvasionHandler() {
+		return this.invasionHandler;
+	}
+
+	/**
+	 * Gets the skysiege handler for handling skysiege-related functionality.
+	 *
+	 * @return the skysiege handler
+	 */
+	@NotNull
+	public SkysiegeHandler getSkysiegeHandler() {
+		return this.skysiegeHandler;
 	}
 
 	/**
@@ -776,7 +1152,8 @@ public class HellblockPlugin extends JavaPlugin {
 	 * @throws IllegalArgumentException if the type is null
 	 */
 	@SuppressWarnings("unchecked")
-	public <T> ActionManager<T> getActionManager(Class<T> type) {
+	@NotNull
+	public <T> ActionManager<T> getActionManager(@NotNull Class<T> type) {
 		if (type == null) {
 			throw new IllegalArgumentException("Type cannot be null");
 		}
@@ -791,15 +1168,17 @@ public class HellblockPlugin extends JavaPlugin {
 	 * @throws IllegalArgumentException if the type is null
 	 */
 	@SuppressWarnings("unchecked")
-	public <T> RequirementManager<T> getRequirementManager(Class<T> type) {
+	@NotNull
+	public <T> RequirementManager<T> getRequirementManager(@NotNull Class<T> type) {
 		if (type == null) {
 			throw new IllegalArgumentException("Type cannot be null");
 		}
 		return (RequirementManager<T>) requirementManagers.get(type);
 	}
 
-	private <T> void registerManager(Class<T> type, AbstractRequirementManager<T> requirementManager,
-			AbstractActionManager<T> actionManager) {
+	private <T> void registerDataManager(@NotNull Class<T> type,
+			@NotNull AbstractRequirementManager<T> requirementManager,
+			@NotNull AbstractActionManager<T> actionManager) {
 		this.requirementManagers.put(type, requirementManager);
 		this.actionManagers.put(type, actionManager);
 		requirementManager.registerBuiltInRequirements();
@@ -967,6 +1346,16 @@ public class HellblockPlugin extends JavaPlugin {
 	}
 
 	/**
+	 * Gets the manager for handling portal-related functionality.
+	 *
+	 * @return the portal manager
+	 */
+	@NotNull
+	public HellblockPortalListener getPortalHandler() {
+		return this.portalListener;
+	}
+
+	/**
 	 * Gets the manager for handling visit-related functionality.
 	 *
 	 * @return the visit manager
@@ -1014,6 +1403,26 @@ public class HellblockPlugin extends JavaPlugin {
 	@NotNull
 	public UpgradeGUIManager getUpgradeGUIManager() {
 		return this.upgradeGUIManager;
+	}
+
+	/**
+	 * Gets the manager for handling notification-related GUI functionality.
+	 *
+	 * @return the notification GUI manager
+	 */
+	@NotNull
+	public NotificationGUIManager getNotificationGUIManager() {
+		return this.notificationGUIManager;
+	}
+
+	/**
+	 * Gets the manager for handling event-related GUI functionality.
+	 *
+	 * @return the event GUI manager
+	 */
+	@NotNull
+	public EventGUIManager getEventGUIManager() {
+		return this.eventGUIManager;
 	}
 
 	/**
@@ -1198,13 +1607,13 @@ public class HellblockPlugin extends JavaPlugin {
 	}
 
 	/**
-	 * Gets the handler for managing lava rain-related functionality.
+	 * Gets the handler for managing nether weather-related functionality.
 	 *
-	 * @return the lava rain handler
+	 * @return the nether weather manager
 	 */
 	@NotNull
-	public RainHandler getLavaRainHandler() {
-		return this.lavaRainHandler;
+	public NetherWeatherManager getNetherWeatherManager() {
+		return this.netherWeatherManager;
 	}
 
 	/**
@@ -1285,6 +1694,46 @@ public class HellblockPlugin extends JavaPlugin {
 	@NotNull
 	public ProtectionManager getProtectionManager() {
 		return this.protectionManager;
+	}
+
+	/**
+	 * Gets the handler for handling the magma walker enchantment.
+	 *
+	 * @return the magma walker handler
+	 */
+	@NotNull
+	public MagmaWalker getMagmaWalkerHandler() {
+		return this.magmaWalker;
+	}
+
+	/**
+	 * Gets the handler for handling the lava vision enchantment.
+	 *
+	 * @return the lava vision handler
+	 */
+	@NotNull
+	public LavaVision getLavaVisionHandler() {
+		return this.lavaVision;
+	}
+
+	/**
+	 * Gets the handler for handling the molten core enchantment.
+	 *
+	 * @return the molten core handler
+	 */
+	@NotNull
+	public MoltenCore getMoltenCoreHandler() {
+		return this.moltenCore;
+	}
+
+	/**
+	 * Gets the handler for handling the crimson thorns enchantment.
+	 *
+	 * @return the crimson thorns handler
+	 */
+	@NotNull
+	public CrimsonThorns getCrimsonThornsHandler() {
+		return this.crimsonThorns;
 	}
 
 	/**
@@ -1396,44 +1845,6 @@ public class HellblockPlugin extends JavaPlugin {
 	}
 
 	/**
-	 * Formats a cooldown time in seconds into a human-readable string.
-	 *
-	 * @param seconds the cooldown time in seconds
-	 * @return a formatted string representing the cooldown time
-	 */
-	public @NotNull String getFormattedCooldown(long seconds) {
-		final long days = seconds / 86400;
-		final long hours = (seconds % 86400) / 3600;
-		final long minutes = (seconds % 3600) / 60;
-		final long remainingSeconds = seconds % 60;
-
-		final String dayFormat = getTranslationManager()
-				.miniMessageTranslation(MessageConstants.FORMAT_DAY.build().key());
-		final String hourFormat = getTranslationManager()
-				.miniMessageTranslation(MessageConstants.FORMAT_HOUR.build().key());
-		final String minuteFormat = getTranslationManager()
-				.miniMessageTranslation(MessageConstants.FORMAT_MINUTE.build().key());
-		final String secondFormat = getTranslationManager()
-				.miniMessageTranslation(MessageConstants.FORMAT_SECOND.build().key());
-
-		final StringBuilder formattedTime = new StringBuilder();
-		if (days > 0) {
-			formattedTime.append(days).append(dayFormat);
-		}
-		if (hours > 0) {
-			formattedTime.append(hours).append(hourFormat);
-		}
-		if (minutes > 0) {
-			formattedTime.append(minutes).append(minuteFormat);
-		}
-		if (remainingSeconds > 0) {
-			formattedTime.append(remainingSeconds).append(secondFormat);
-		}
-
-		return formattedTime.toString();
-	}
-
-	/**
 	 * Checks if a specified plugin is enabled on the Bukkit server.
 	 *
 	 * @param plugin The name of the plugin to check.
@@ -1460,8 +1871,26 @@ public class HellblockPlugin extends JavaPlugin {
 	 *
 	 * @param messageSupplier the supplier for the debugging mode.
 	 */
-	public void debug(Supplier<String> messageSupplier) {
+	public void debug(@NotNull Supplier<String> messageSupplier) {
 		this.debugger.accept(messageSupplier);
+	}
+
+	/**
+	 * Wraps the given message with ANSI color codes for colored console output.
+	 * <p>
+	 * This method is intended for use in terminals or environments that support
+	 * ANSI escape codes, such as local development consoles or when using a custom
+	 * console appender like Aikar's TerminalConsoleAppender. It appends an ANSI
+	 * reset code at the end to prevent color bleed into subsequent log lines.
+	 *
+	 * @param ansi    The ANSI color code to apply (e.g. {@code "\u001B[31m"} for
+	 *                red).
+	 * @param message The plain text message to colorize.
+	 * @return The message wrapped in the given ANSI color code and reset code.
+	 */
+	@NotNull
+	private String colorLog(@NotNull String ansi, @NotNull String message) {
+		return ansi + message + ANSI_RESET;
 	}
 
 	/**
@@ -1472,7 +1901,8 @@ public class HellblockPlugin extends JavaPlugin {
 	 *         not found
 	 * @throws ReflectiveOperationException if reflection fails
 	 */
-	public @Nullable String identifyClassLoader(ClassLoader classLoader) throws ReflectiveOperationException {
+	@Nullable
+	public String identifyClassLoader(@NotNull ClassLoader classLoader) throws ReflectiveOperationException {
 		final Class<?> pluginClassLoaderClass = Class.forName("org.bukkit.plugin.java.PluginClassLoader");
 		if (!pluginClassLoaderClass.isInstance(classLoader)) {
 			return null;
